--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>포트폴리오</title>
 </head>
 <body>
-    asdfasdf
+    ㅇㅇㅇㅇㅇㅇㅇㅇㅇ
 </body>
 </html>
