--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>포트폴리오</title>
+    <link rel="stylesheet" href="./index.css/index.css">
 </head>
 <body>
-    잘되는지 확인이요
+    <div class="in">
+        잘되는지 확인이용
+    </div>
 </body>
 </html>
