--- a/index.html
+++ b/index.html
@@ -3,12 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포트폴리오</title>
-    <link rel="stylesheet" href="./index.css/index.css">
+    <title>Jinwoo Kim Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #ffffff;
+            color: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: left;
+        }
+        .container {
+            width: 80%;
+            max-width: 800px;
+            position: relative;
+        }
+        .year {
+            font-size: 15px;
+            color: #333;
+            margin-bottom: 5px;
+        }
+        .portfolio-title {
+            font-size: 120px;
+            font-weight: bold;
+            color: #000;
+            margin: 0 0 10px 30px; /* 왼쪽 여유 공간 */
+        }
+        .line {
+            height: 1px;
+            background-color: #000;
+            margin-left: 30px;
+            margin-bottom: 20px;
+        }
+        .tagline {
+            font-size: 24px;
+            color: #333;
+            text-align: right;
+            margin: 0 30px 10px 0;
+        }
+        .name {
+            font-size: 16px;
+            color: #555;
+            text-align: right;
+            margin: 0 30px 0 0;
+        }
+    </style>
 </head>
 <body>
-    <div class="in">
-        주현아 내가 많이 사랑해
+    <div class="container">
+        <p class="year">2024</p>
+        <div class="portfolio-title">Portfolio.</div>
+        <div class="line"></div>
+        <p class="tagline">"Always Growing, Always Evolving"</p>
+        <p class="name">Jinwoo Kim</p>
     </div>
 </body>
 </html>
